fix: publish process (#248)